--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,10 +2,60 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <style>
+        /* Стили для таблицы */
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .table th, .table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        /* Стили для заголовков таблицы */
+        .table th {
+            background-color: #f2f2f2;
+        }
+
+        /* Стили для ссылки "Logout" */
+        .btn-back {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .btn-back:hover {
+            background-color: #0056b3;
+        }
+
+    </style>
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
+<table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>Sex</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:object="${user}">
+        <td th:text="${user.username}"></td>
+        <td th:text="${user.surname}"></td>
+        <td th:text="${user.sex}"></td>
+    </tr>
+    </tbody>
+</table>
 
-
+<button class="btn btn-lg btn-success" onclick="window.location.href='/'">LOGOUT</button>
 </body>
 </html>
