--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,61 +1,160 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Spring Security Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+
     <style>
-        /* Стили для таблицы */
-        .table {
+        html,
+        body,
+        .container-fluid,
+        .row,
+        .col-1,
+        .col-11 {
+            height: 100%;
+        }
+
+        .col-2 {
+            background-color: white;
+        }
+        body {
+            background-color: #f4f4f4;
+        }
+        .btn-user {
             width: 100%;
-            border-collapse: collapse;
+            margin: 0;
+        }
+        .header {
+            padding: 10px;
+            background-color: #343a40;
+            color: white;
         }
 
-        .table th, .table td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        /* Стили для заголовков таблицы */
-        .table th {
-            background-color: #f2f2f2;
-        }
-
-        /* Стили для ссылки "Logout" */
-        .btn-back {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
+        .header a {
             text-decoration: none;
-            border-radius: 5px;
+            color: #f4f4f4;
         }
-
-        .btn-back:hover {
-            background-color: #0056b3;
-        }
-
     </style>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-<table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Sex</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:object="${user}">
-        <td th:text="${user.username}"></td>
-        <td th:text="${user.surname}"></td>
-        <td th:text="${user.sex}"></td>
-    </tr>
-    </tbody>
-</table>
+<!--<div class="header " style="background-color: #343a40; color: #f4f4f4">-->
 
-<button class="btn btn-lg btn-success" onclick="window.location.href='/'">LOGOUT</button>
+<!--    <tr th:object="${user}">-->
+<!--        <td th:text="${user.username}"></td>-->
+<!--        <td th:text="${'with role: ' + rolesString}"></td>-->
+<!--    </tr>-->
+<!--    <a onclick="window.location.href='/'">LOGOUT</a>-->
+<!--</div>-->
+<div class="header">
+    <span style="font-weight: bold;" th:text="${user.username}"></span>
+    <span th:text="${'with role: ' + rolesString}"></span>
+
+    <a style="float: right;" onclick="window.location.href='/'">LOGOUT</a>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2">
+            <a class="btn btn-primary btn-user d-block w-100 text-center"
+               sec:authorize="hasRole('ROLE_ADMIN')"
+               href="/admin">admin</a>
+            <a class="btn btn-primary btn-user d-block w-100 text-center"
+               style="color: white;">User</a>
+        </div>
+
+        <div class="col">
+            <h1>User information-page</h1>
+
+            <div class="card">
+                <div class="card-header" style="font-weight: bold;">
+                    About User
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Sex</th>
+                            <th scope="col">Role</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:object="${user}">
+                            <td th:text="${user.id}"></td>
+                            <td th:text="${user.username}"></td>
+                            <td th:text="${user.surname}"></td>
+                            <td th:text="${user.sex}"></td>
+                            <td>USER</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class="container-fluid">-->
+
+
+<!--    <div class="row">-->
+
+<!--        <div class="col-2 ">-->
+<!--            <button class="btn btn-primary btn-user">User</button>-->
+<!--        </div>-->
+
+
+
+<!--        <div class="col">-->
+<!--            <h1>User information page</h1>-->
+
+<!--            <div class="card">-->
+
+<!--                <div class="card-header">-->
+<!--                    About User-->
+<!--                </div>-->
+<!--                <div class="card-body">-->
+<!--                    <table class="table table-striped">-->
+<!--                        <thead>-->
+<!--                        <tr>-->
+<!--                            <th scope="col">ID</th>-->
+<!--                            <th scope="col">First Name</th>-->
+<!--                            <th scope="col">Last Name</th>-->
+<!--                            <th scope="col">Sex</th>-->
+<!--                            <th scope="col">Role</th>-->
+<!--                        </tr>-->
+<!--                        </thead>-->
+<!--                        <tbody>-->
+<!--                        <tr th:object="${user}">-->
+<!--                            <td th:text="${user.id}"></td>-->
+<!--                            <td th:text="${user.username}"></td>-->
+<!--                            <td th:text="${user.surname}"></td>-->
+<!--                            <td th:text="${user.sex}"></td>-->
+<!--                            <td>USER</td>-->
+
+<!--                        </tr>-->
+<!--                        </tbody>-->
+<!--                    </table>-->
+<!--                </div>-->
+<!--            </div>-->
+
+
+
+<!--            &lt;!&ndash;        <span sec:authorize="hasRole('ROLE_ADMIN')">&ndash;&gt;-->
+<!--            &lt;!&ndash;            only for users who has a role admin&ndash;&gt;-->
+<!--            &lt;!&ndash;        </span>&ndash;&gt;-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="header" style="background-color: #343a40; color: #f4f4f4; text-align: center;">-->
+<!--    <span style="font-weight: bold;" th:text="${user.username}"></span>-->
+<!--    <span th:text="${'with role: ' + rolesString}"></span>-->
+
+<!--    <a style="float: right;" onclick="window.location.href='/'">LOGOUT</a>-->
+<!--</div>-->
+
+
 </body>
 </html>
