Задача 3.1.4 - первый пунт Rest-controller,

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -89,12 +89,12 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:object="${user}">
-                            <td th:text="${user.id}"></td>
-                            <td th:text="${user.username}"></td>
-                            <td th:text="${user.surname}"></td>
-                            <td th:text="${user.sex}"></td>
-                            <td th:text="${rolesString}"></td>
+                        <tr id="user" >
+                            <td id="user-id"></td>
+                            <td id="user-name"></td>
+                            <td id="user-surname"></td>
+                            <td id="user-sex"></td>
+                            <td id="user-roles"></td>
                         </tr>
                         </tbody>
                     </table>
@@ -103,7 +103,37 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-
+<script>
+    $(document).ready(function () {
+        fetch('http://localhost:8088/api/v1/user/current-user', {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        }).then((response) => {
+            return response.json();
+        }).then((data) => {
+            document.getElementById('user-id').innerHTML = data.user.id
+            document.getElementById('user-name').innerHTML = data.user.username
+            document.getElementById('user-surname').innerHTML = data.user.surname
+            document.getElementById('user-sex').innerHTML = data.user.sex
+            if(data.user.roles.length > 1) {
+                document.getElementById('user-roles').innerHTML = data.user.roles[0].role + ", " + data.user.roles[1].role
+            }
+            document.getElementById('user-roles').innerHTML = data.user.roles[0].role
+        })
+    })
+</script>
 </body>
 </html>
