--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html lang="en"  xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Management</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <style>
         html,
         body,
@@ -80,8 +80,8 @@
 <body>
 <div id="wrapper">
     <div class="header">
-        <span style="font-weight: bold;" th:text="${user.username} + ' with role:' "></span>
-        <span th:each="role : ${user.roles}" th:text="${role.role.substring(5)} + ' '"></span>
+        <span id="header-user-name" style="font-weight: bold;"></span>
+        <span id="header-user-roles"></span>
         <a style="float: right;" onclick="window.location.href='/'">LOGOUT</a>
     </div>
 </div>
@@ -127,24 +127,26 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="user: ${allUsers}">
-                                    <td th:text="${user.id}"></td>
-                                    <td th:text="${user.username}"></td>
-                                    <td th:text="${user.surname}"></td>
-                                    <td th:text="${user.sex}"></td>
+
+<!--                                TODO: изменить заполнение таблицы на fetch api-->
+<!--                                <tr th:each="user: ${allUsers}">-->
+<!--                                    <td th:text="${user.id}"></td>-->
+<!--                                    <td th:text="${user.username}"></td>-->
+<!--                                    <td th:text="${user.surname}"></td>-->
+<!--                                    <td th:text="${user.sex}"></td>-->
+<!--                                    <td>-->
+<!--                                        <span th:each="role : ${user.roles}" th:text="${role.role.substring(5)} + ' '"></span>-->
+<!--                                    </td>-->
                                     <td>
-                                        <span th:each="role : ${user.roles}" th:text="${role.role.substring(5)} + ' '"></span>
-                                    </td>
-                                    <td>
-                                        <button
-                                                id="edit-user"
-                                                type="button"
-                                                class="btn btn-info edit-btn"
-                                                data-toggle="modal"
-                                                data-target="#userEditModal"
-                                                th:data-userId="${user.id}"
-                                        >Edit
-                                        </button>
+<!--                                        <button-->
+<!--                                                id="edit-user"-->
+<!--                                                type="button"-->
+<!--                                                class="btn btn-info edit-btn"-->
+<!--                                                data-toggle="modal"-->
+<!--                                                data-target="#userEditModal"-->
+<!--                                                th:data-userId="${user.id}"-->
+<!--                                        >Edit-->
+<!--                                        </button>-->
                                         <!-- Модальное окно для редактирования -->
 
                                         <div class="modal fade" id="userEditModal" tabindex="-1" role="dialog"
@@ -213,15 +215,15 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <button
-                                                id="delete-user"
-                                                type="button"
-                                                class="btn btn-danger"
-                                                data-toggle="modal"
-                                                data-target="#userDeleteModal"
-                                                th:data-userId="${user.id}"
-                                        >Delete
-                                        </button>
+<!--                                        <button-->
+<!--                                                id="delete-user"-->
+<!--                                                type="button"-->
+<!--                                                class="btn btn-danger"-->
+<!--                                                data-toggle="modal"-->
+<!--                                                data-target="#userDeleteModal"-->
+<!--                                                th:data-userId="${user.id}"-->
+<!--                                        >Delete-->
+<!--                                        </button>-->
                                         <!--Модальное окно для удаления-->
                                         <div class="modal fade" id="userDeleteModal" tabindex="-1" role="dialog"
                                              aria-labelledby="userDeleteDialogLabel" aria-hidden="true">
@@ -241,7 +243,8 @@
                                                             <div class="form-group">
                                                                 <div class="input-row">
                                                                     <label for="delete-name">Name</label>
-                                                                    <input type="text" class="form-control" id="delete-name"
+                                                                    <input type="text" class="form-control"
+                                                                           id="delete-name"
                                                                            disabled>
                                                                 </div>
                                                                 <div class="input-row">
@@ -251,12 +254,14 @@
                                                                 </div>
                                                                 <div class="input-row">
                                                                     <label for="delete-sex">Sex</label>
-                                                                    <input type="text" class="form-control" id="delete-sex"
+                                                                    <input type="text" class="form-control"
+                                                                           id="delete-sex"
                                                                            disabled>
                                                                 </div>
                                                                 <div class="input-row">
                                                                     <label for="roles">Role</label>
-                                                                    <input type="text" class="form-control" id="delete-role"
+                                                                    <input type="text" class="form-control"
+                                                                           id="delete-role"
                                                                            disabled>
                                                                 </div>
                                                             </div>
@@ -274,13 +279,13 @@
                                             </div>
                                         </div>
                                     </td>
-                                </tr>
+<!--                                </tr>-->
                                 </tbody>
                             </table>
                         </div>
                     </div>
 
-                                    <!--  Добавление новое пользователя -->
+                    <!--  Добавление новое пользователя -->
                     <div class="tab-pane fade" id="new-user" role="tabpanel" aria-labelledby="new-user-tab">
                         <div class="card-header" style="font-weight: bold;">
                             New User
@@ -327,9 +332,6 @@
 </div>
 
 
-
-
-
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
         crossorigin="anonymous"></script>
@@ -341,226 +343,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-    //FORM for editing
-    $(document).ready(function () {
-        //запрос на получение всех
-        fetch('http://localhost:8088/api/admin',{
-            method: 'GET',
-            headers: {
-                'Content-Type': 'application/json'
-            }
-        })
-            .then(response => response.json())
-            // .then(data => {
-            //     // Находим элемент <tbody>
-            //     const tbody = document.querySelector('tbody');
-            //
-            //     // Очищаем <tbody>, если необходимо
-            //     tbody.innerHTML = '';
-            //
-            //     // Проходимся по каждому пользователю из данных
-            //     data.forEach(user => {
-            //         // Создаем новую строку <tr>
-            //         const tr = document.createElement('tr');
-            //
-            //         // Создаем и заполняем ячейки <td>
-            //         const idTd = document.createElement('td');
-            //         idTd.innerText = user.id;
-            //         tr.appendChild(idTd);
-            //
-            //         const nameTd = document.createElement('td');
-            //         nameTd.innerText = user.username;
-            //         tr.appendChild(nameTd);
-            //
-            //         const surnameTd = document.createElement('td');
-            //         surnameTd.innerText = user.surname;
-            //         tr.appendChild(surnameTd);
-            //
-            //         const sexTd = document.createElement('td');
-            //         sexTd.innerText = user.sex;
-            //         tr.appendChild(sexTd);
-            //
-            //         const rolesTd = document.createElement('td');
-            //         rolesTd.innerText = user.roles.map(role => role.role).join(', ');
-            //         tr.appendChild(rolesTd);
-            //
-            //         // Создаем ячейки для кнопок Edit и Delete
-            //         const editTd = document.createElement('td');
-            //         const deleteTd = document.createElement('td');
-            //
-            //         // Создаем кнопку Edit
-            //
-            //         const editButton = document.createElement('button');
-            //         editButton.id = 'edit-user';
-            //         editButton.type = 'button';
-            //         editButton.className = 'btn btn-info edit-btn';
-            //         editButton.setAttribute('data-toggle', 'modal');
-            //         editButton.setAttribute('data-target', '#userEditModal');
-            //         editButton.setAttribute('data-userId', user.id);
-            //         editButton.innerText = 'Edit';
-            //         editTd.appendChild(editButton);
-            //
-            //         // Создаем кнопку Delete
-            //         const deleteButton = document.createElement('button');
-            //         deleteButton.id = 'delete-user';
-            //         deleteButton.type = 'button';
-            //         deleteButton.className = 'btn btn-danger';
-            //         deleteButton.setAttribute('data-toggle', 'modal');
-            //         deleteButton.setAttribute('data-target', '#userDeleteModal');
-            //         deleteButton.setAttribute('data-userId', user.id);
-            //         deleteButton.innerText = 'Delete';
-            //         deleteTd.appendChild(deleteButton);
-            //
-            //         // Добавляем ячейки с кнопками в строку
-            //         tr.appendChild(editTd);
-            //         tr.appendChild(deleteTd);
-            //
-            //         // Добавляем строку <tr> в <tbody>
-            //         tbody.appendChild(tr);
-            //     });
-            // })
-            // .catch(error => console.error(error));
-
-
-
-        $('#userEditModal').on('show.bs.modal', function (event) {
-            let button = $(event.relatedTarget);
-            let userId = button.data('userid');
-
-            if (userId) {
-                const url = 'http://localhost:8088/api/v1/user/' + userId;
-                const headers = {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                }
-                fetch(url, headers)
-                    .then(response => {
-                        if (!response.ok) {
-                            alert("Error: " + response.status + " " + response.statusText);
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        document.getElementById('id').value = data.id
-                        document.getElementById('user-id').value = data.id
-                        document.getElementById('name').value = data.username
-                        document.getElementById('surname').value = data.surname
-                        document.getElementById('sex').value = data.sex
-                        if (data.roles.length > 1) {
-                            document.getElementById('roles').value = data.roles[0].role + ", " + data.roles[1].role
-                        } else {
-                            document.getElementById('roles').value = data.roles[0].role
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                    });
-            }
-        })
-    });
-
-    // Обработчик события отправки формы
-    $('#editForm').submit(function (event) {
-        // Отмена стандартного поведения формы
-        event.preventDefault();
-
-        // Сериализация данных формы в формат JSON
-        let formData = JSON.stringify({
-            id: $('#id').val(),
-            username: $('#name').val(),
-            surname: $('#surname').val(),
-            sex: $('#sex').val(),
-            password: $('#password').val(),
-            roles: [{role: $('#roles').val()}] // Преобразование роли в объект
-        });
-        // Отправка данных на сервер методом PATCH
-        const url = '/admin/update';
-        const headers = {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: formData
-        }
-        fetch(url, headers)
-            .then(response => {
-                if (response.ok) {
-                    $('#userEditModal').modal('hide');
-                    // Перезагрузка страницы или выполнение других действий
-                    location.reload();
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-    });
-
-
-    $('#new-user-form').submit(function (event) {
-        event.preventDefault();
-
-        let formData = JSON.stringify({
-            username: $('#new-name').val(),
-            surname: $('#new-surname').val(),
-            sex: $('#new-sex').val(),
-            password: $('#new-password').val(),
-            roles: [{role: $('#new-role').val()}]
-        });
-        const url = 'http://localhost:8088/admin/create'
-        const headers = {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: formData
-        }
-        fetch(url, headers)
-            .then(response => {
-                if (response.ok) {
-                    location.reload()
-                }
-                return response.json()
-            })
-            .catch(error => console.error("Error:", error))
-    });
-
-    //FORM for delete
-    $('#userDeleteModal').on('show.bs.modal', function (event) {
-        let button = $(event.relatedTarget)
-        let userId = button.data('userid')
-        if (userId) {
-            const url = 'http://localhost:8088/api/v1/user/' + userId
-            const headers = {
-                method: 'GET',
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            }
-            fetch(url, headers)
-                .then(response => {
-                    if (!response.ok) {
-                        alert("Error: " + response.status + " " + response.statusText);
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    document.getElementById('delete-name').value = data.username
-                    document.getElementById('delete-surname').value = data.surname
-                    document.getElementById('delete-sex').value = data.sex
-                    if (data.roles.length > 1) {
-                        document.getElementById('delete-role').value = data.roles[0].role + ", " + data.roles[1].role
-                    } else {
-                        document.getElementById('delete-role').value = data.roles[0].role
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        }
-    })
+<script src="/js/admin.js">
 
 </script>
 </body>
