--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,62 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Spring Security Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-
-    <style>
-        html,
-        body,
-        .container-fluid,
-        .row{
-            height: 100%;
-        }
-
-        .col-2 {
-            background-color: white;
-            padding: 0;
-        }
-        .col-2 a {
-            border-radius: 0;
-        }
-        body {
-            background-color: #f4f4f4;
-        }
-        .btn-user {
-            width: 100%;
-            margin: 0;
-        }
-        .header {
-            padding: 10px;
-            background-color: #343a40;
-            color: white;
-        }
-
-        .header a {
-            text-decoration: none;
-            color: #f4f4f4;
-        }
-        .sidebar-link {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            text-align: center;
-            color: white;
-            text-decoration: none;
-        }
-
-        .sidebar-link.inactive {
-            background-color: white;
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="/style/user.css">
 </head>
 <body>
 <div id="wrapper">
     <div class="header">
-        <span style="font-weight: bold;" th:text="${user.username} + ' with role:' "></span>
-        <span th:each="role : ${user.roles}" th:text="${role.role.substring(5)} + ' '"></span>
-
+        <span id="header-user-name" style="font-weight: bold;"></span>
+        <span id="header-user-roles"></span>
         <a style="float: right;" onclick="window.location.href='/'">LOGOUT</a>
     </div>
 </div>
@@ -114,26 +67,8 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-    $(document).ready(function () {
-        fetch('http://localhost:8088/api/v1/user/current-user', {
-            method: 'GET',
-            headers: {
-                'Content-Type': 'application/json'
-            }
-        }).then((response) => {
-            return response.json();
-        }).then((data) => {
-            document.getElementById('user-id').innerHTML = data.user.id
-            document.getElementById('user-name').innerHTML = data.user.username
-            document.getElementById('user-surname').innerHTML = data.user.surname
-            document.getElementById('user-sex').innerHTML = data.user.sex
-            if(data.user.roles.length > 1) {
-                document.getElementById('user-roles').innerHTML = data.user.roles[0].role + ", " + data.user.roles[1].role
-            }
-            document.getElementById('user-roles').innerHTML = data.user.roles[0].role
-        })
-    })
+<script src="/js/user.js">
+
 </script>
 </body>
 </html>
